# E-commerce_project

./: .gitignore  CMakeLists.txt  README.md  db.cpp  db.h  main.cpp
scripts/: data_clean.py
sql/: test.session.sql
